--- a/apps/explorer/src/styles.scss
+++ b/apps/explorer/src/styles.scss
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+@import './theme/theme.scss';
+
+html,
+body {
+  height: 100%;
+  background: whitesmoke;
+}
+
+body {
+  margin: 0;
+  font-family: 'Open Sans', "Helvetica Neue", sans-serif;
+}
