--- a/apps/explorer/src/app/dashboard/dashboard.component.html
+++ b/apps/explorer/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
-<p>
-  dashboard works!
-</p>
+<lto-content-section width="large" fxLayout="column" fxLayout.gt-md="row" fxLayoutGap="16px">
+  <explorer-last-blocks fxFlex="50" fxFlexOrder="2"></explorer-last-blocks>
+  <explorer-unconfirmed-transactions fxFlex="50" fxFlexOrder="1" fxFlexOrder.gt-md="3"></explorer-unconfirmed-transactions>
+</lto-content-section>
