--- a/apps/explorer/src/app/blocks/block-details/block-details.component.html
+++ b/apps/explorer/src/app/blocks/block-details/block-details.component.html
@@ -43,12 +43,15 @@
         </div>
       </mat-card-content>
     </mat-card>
-    <h3 class="mat-h3">Transactions</h3>
-    <mat-card *ngFor="let transactionsGroup of block.groupedTransactions | keyvalue" class="transactions-card">
-      <mat-card-title>{{getTransactionName(transactionsGroup.key)}}</mat-card-title>
-      <explorer-card-content-table>
-        <explorer-transactions-table [transactionsType]="transactionsGroup.key" [transactions]="transactionsGroup.value"></explorer-transactions-table>
-      </explorer-card-content-table>
-    </mat-card>
+    <ng-container *ngIf="block.transactions.length !== 0">
+      <h3 class="mat-h3">Transactions</h3>
+      <mat-card *ngFor="let transactionsGroup of block.groupedTransactions | keyvalue" class="transactions-card">
+        <mat-card-title>{{getTransactionName(transactionsGroup.key)}}</mat-card-title>
+        <explorer-card-content-table>
+          <explorer-transactions-table [transactionsType]="transactionsGroup.key" [transactions]="transactionsGroup.value"></explorer-transactions-table>
+        </explorer-card-content-table>
+      </mat-card>
+    </ng-container>
+
   </ng-container>
 </lto-content-section>
