--- a/apps/explorer/src/app/shared/components/transactions-table/transactions-table.component.html
+++ b/apps/explorer/src/app/shared/components/transactions-table/transactions-table.component.html
@@ -36,7 +36,7 @@
 
   <ng-container matColumnDef="amount">
     <th mat-header-cell *matHeaderCellDef>Amount</th>
-    <td mat-cell *matCellDef="let transaction">{{transaction.amount}}</td>
+    <td mat-cell *matCellDef="let transaction">{{transaction.amount | lto}}</td>
   </ng-container>
 
   <ng-container matColumnDef="total_amount">
