Add anchors encoding

--- a/apps/explorer/src/app/transactions/transaction-details/transaction-details.component.html
+++ b/apps/explorer/src/app/transactions/transaction-details/transaction-details.component.html
@@ -46,9 +46,9 @@
       </div>
     </mat-card-content>
   </mat-card>
-
-  <ng-container *ngTemplateOutlet="anchorsTpl; context: { $implicit: transaction }">
-
+  <ng-container *ngIf="transaction.type === TransactionType.ANCHOR">
+    <ng-container *ngTemplateOutlet="anchorsTpl; context: { $implicit: transaction }">
+    </ng-container>
   </ng-container>
 </ng-template>
 
@@ -57,11 +57,16 @@
     <mat-card-title>Anchors</mat-card-title>
     <mat-card-content>
       <div class="anchor" *ngFor="let anchor of transaction.anchors">
-        <lto-responsive-text [text]="anchor"></lto-responsive-text>
+        <lto-responsive-text [text]="anchor | encode:anchorsEncoding"></lto-responsive-text>
       </div>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>HEX <mat-icon>arrow_drop_down</mat-icon></button>
+      <button mat-button [matMenuTriggerFor]="encodingMenu">{{anchorsEncoding}} <mat-icon>arrow_drop_down</mat-icon></button>
+      <mat-menu #encodingMenu="matMenu">
+        <button mat-menu-item (click)="setAnchorsEncoding(Encoding.hex)">hex</button>
+        <button mat-menu-item (click)="setAnchorsEncoding(Encoding.base58)">base58</button>
+        <button mat-menu-item (click)="setAnchorsEncoding(Encoding.base64)">base64</button>
+      </mat-menu>
     </mat-card-actions>
   </mat-card>
 </ng-template>
