--- a/apps/explorer/src/app/transactions/transaction-details/transaction-details.component.html
+++ b/apps/explorer/src/app/transactions/transaction-details/transaction-details.component.html
@@ -50,6 +50,10 @@
     <ng-container *ngTemplateOutlet="anchorsTpl; context: { $implicit: transaction }">
     </ng-container>
   </ng-container>
+
+  <ng-container *ngIf="transaction.type === TransactionType.MASS_TRANSFER">
+    <ng-container *ngTemplateOutlet="transfersTpl; context: { $implicit: transaction }"></ng-container>
+  </ng-container>
 </ng-template>
 
 <ng-template #anchorsTpl let-transaction>
@@ -68,5 +72,29 @@
         <button mat-menu-item (click)="setAnchorsEncoding(Encoding.base64)">base64</button>
       </mat-menu>
     </mat-card-actions>
+  </mat-card>
+</ng-template>
+
+<ng-template #transfersTpl let-transaction>
+  <mat-card>
+    <mat-card-title>Transfers</mat-card-title>
+    <explorer-card-content-table>
+      <table mat-table [dataSource]="transaction.transfers" aria-label="Transfers" fxFlex="1 1 auto">
+        <ng-container matColumnDef="recipient">
+          <th mat-header-cell *matHeaderCellDef><span>Recipient</span></th>
+          <td mat-cell *matCellDef="let transfer"><a [routerLink]="['/', 'addresses', transfer.recipient]">
+              <lto-responsive-text xs="15" xl="40" [text]="transfer.recipient"></lto-responsive-text>
+            </a></td>
+        </ng-container>
+
+        <ng-container matColumnDef="amount">
+          <th mat-header-cell *matHeaderCellDef>Amount</th>
+          <td mat-cell *matCellDef="let transfer">{{transfer.amount | lto}}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="['recipient', 'amount']"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['recipient', 'amount']"></tr>
+      </table>
+    </explorer-card-content-table>
   </mat-card>
 </ng-template>
