--- a/apps/explorer/src/app/app.component.html
+++ b/apps/explorer/src/app/app.component.html
@@ -1,4 +1,7 @@
-<mat-toolbar>
+<mat-toolbar fxLayout="row">
   <h3 class="mat-h3 home-link" routerLink="/">Explorer</h3>
+  <div fxFlex="1 1 auto" fxLayout="row" fxLayoutAlign="center center">
+    <explorer-search (search)="search($event)" placeholder="Transaction id, address or block"></explorer-search>
+  </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
