--- a/apps/explorer/src/app/shared/components/transactions-table/transactions-table.component.html
+++ b/apps/explorer/src/app/shared/components/transactions-table/transactions-table.component.html
@@ -10,7 +10,7 @@
   <!-- Name Column -->
   <ng-container matColumnDef="fee">
     <th mat-header-cell *matHeaderCellDef>Fee</th>
-    <td mat-cell *matCellDef="let transaction">{{transaction.fee | lto}}</td>
+    <td mat-cell *matCellDef="let transaction">{{transaction.fee | lto | number}}</td>
   </ng-container>
 
   <ng-container matColumnDef="timestamp">
@@ -36,12 +36,12 @@
 
   <ng-container matColumnDef="amount">
     <th mat-header-cell *matHeaderCellDef>Amount</th>
-    <td mat-cell *matCellDef="let transaction">{{transaction.amount | lto}}</td>
+    <td mat-cell *matCellDef="let transaction">{{transaction.amount | lto | number}}</td>
   </ng-container>
 
   <ng-container matColumnDef="total_amount">
     <th mat-header-cell *matHeaderCellDef>Amount</th>
-    <td mat-cell *matCellDef="let transaction">{{transaction.totalAmount}}</td>
+    <td mat-cell *matCellDef="let transaction">{{transaction.totalAmount | number}}</td>
   </ng-container>
 
   <ng-container matColumnDef="leasing">
