--- a/apps/explorer/src/app/transactions/transaction-details/transaction-details.component.html
+++ b/apps/explorer/src/app/transactions/transaction-details/transaction-details.component.html
@@ -89,7 +89,7 @@
 
         <ng-container matColumnDef="amount">
           <th mat-header-cell *matHeaderCellDef>Amount</th>
-          <td mat-cell *matCellDef="let transfer">{{transfer.amount | lto}}</td>
+          <td mat-cell *matCellDef="let transfer">{{transfer.amount | lto | number}}</td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="['recipient', 'amount']"></tr>
