--- a/apps/explorer/src/app/dashboard/dashboard.component.html
+++ b/apps/explorer/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,9 @@
-<lto-content-section width="large" fxLayout="column" fxLayout.gt-md="row" fxLayoutGap="16px">
-  <explorer-last-blocks fxFlex="50" fxFlexOrder="2"></explorer-last-blocks>
-  <explorer-unconfirmed-transactions fxFlex="50" fxFlexOrder="1" fxFlexOrder.gt-md="3"></explorer-unconfirmed-transactions>
+<lto-content-section width="large">
+  <div fxLayout="column" fxLayout.gt-md="row" fxLayoutGap="16px">
+    <explorer-last-blocks fxFlex="50" fxFlexOrder="2"></explorer-last-blocks>
+    <div fxLayout="column" fxLayoutGap="16px" fxFlex="50" fxFlexOrder="1" fxFlexOrder.gt-md="3">
+      <explorer-statistics></explorer-statistics>
+      <explorer-unconfirmed-transactions></explorer-unconfirmed-transactions>
+    </div>
+  </div>
 </lto-content-section>
