--- a/apps/explorer/src/app/dashboard/components/statistics/statistics.component.html
+++ b/apps/explorer/src/app/dashboard/components/statistics/statistics.component.html
@@ -6,7 +6,7 @@
         <span>Unable to load statistics</span>
       </div>
       <lto-loading-spinner *ngSuspensePlaceholder="500"></lto-loading-spinner>
-      <ngx-charts-line-chart *ngSuspenseSuccess="let stats" [xAxis]="true" [yAxis]="true" [showGridLines]="false"
+      <ngx-charts-line-chart *ngSuspenseSuccess="let stats" [xAxis]="true" [yAxis]="true" [showGridLines]="true"
         [customColors]="colors" [results]="stats"></ngx-charts-line-chart>
     </div>
   </mat-card-content>
