--- a/apps/explorer/src/app/shared/components/transactions-table/transactions-table.component.html
+++ b/apps/explorer/src/app/shared/components/transactions-table/transactions-table.component.html
@@ -1,4 +1,14 @@
 <table mat-table [dataSource]="transactions" aria-label="Elements">
+  <ng-container matColumnDef="direction">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let transaction" [ngSwitch]="isOutgoing(transaction)">
+      <div class="direction" fxLayout="row" fxLayoutAlign="center center">
+        <div class="out" *ngSwitchCase="true">OUT</div>
+        <div class="in " *ngSwitchCase="false">IN</div>
+      </div>
+    </td>
+  </ng-container>
+
   <!-- Id Column -->
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef><span>Id</span></th>
