--- a/apps/explorer/src/app/transactions/transaction-details/transaction-details.component.scss
+++ b/apps/explorer/src/app/transactions/transaction-details/transaction-details.component.scss
@@ -1,3 +1,5 @@
+@import '~@angular/material/theming';
+
 mat-card {
   margin-bottom: 16px;
 }
@@ -23,5 +25,32 @@ mat-card-content {
       font-size: 15px;
       line-height: 24px;
     }
+  }
+}
+
+
+.receipt {
+  background: #00701a;
+  padding: 24px;
+  box-sizing: border-box;
+  color: white;
+  @include mat-elevation(2);
+  margin-bottom: 16px;
+  border-radius: 16px;
+
+  h2 {
+    margin-top: 0;
+    font-weight: 100;
+    text-align-last: left;
+  }
+
+  &.invalid {
+    background: #ba000d;
+  }
+
+  mat-icon {
+    width: 64px;
+    height: 64px;
+    font-size: 64px;
   }
 }
