make recepit observable

--- a/apps/explorer/src/app/transactions/transaction-details/transaction-details.component.html
+++ b/apps/explorer/src/app/transactions/transaction-details/transaction-details.component.html
@@ -57,13 +57,13 @@
 
 
   <ng-container *ngIf="transaction.type === TransactionType.ANCHOR">
-    <div class="receipt" *ngIf="hash$ | async as hash" [ngClass]="{'invalid': !transactionHasAnchor(hash, transaction)}"
-      fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="24px">
-      <mat-icon *ngIf="transactionHasAnchor(hash, transaction)">check_circle_outline</mat-icon>
-      <mat-icon *ngIf="transactionHasAnchor(hash, transaction) !== true">highlight_off</mat-icon>
+    <div class="receipt" *ngIf="receipt$ | async as receipt" [ngClass]="{'invalid': !receipt.valid}" fxLayout="row"
+      fxLayoutAlign="start center" fxLayoutGap="24px">
+      <mat-icon *ngIf="receipt.valid">check_circle_outline</mat-icon>
+      <mat-icon *ngIf="receipt.valid !== true">highlight_off</mat-icon>
       <div fxLayout="column" fxFlex="1 1 auto">
-        <h2>Hash {{transactionHasAnchor(hash, transaction) ? 'valid' : 'invalid'}}</h2>
-        <div class="hash">{{hash}}</div>
+        <h2>Hash {{receipt.valid ? 'valid' : 'invalid'}}</h2>
+        <div class="hash">{{receipt.hash}}</div>
       </div>
     </div>
 
