Rename stats widget

--- a/apps/explorer/src/app/dashboard/components/statistics/statistics.component.html
+++ b/apps/explorer/src/app/dashboard/components/statistics/statistics.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <mat-card-title>Statistics</mat-card-title>
+  <mat-card-title>Transaction per day</mat-card-title>
   <mat-card-content>
     <div class="chart-container" [ngSuspense]="chartData$">
       <div class="error" *ngSuspenseError fxLayout="column" fxLayoutAlign="center center" fxFlexFill>
