--- a/apps/explorer/src/app/blocks/block-details/block-details.component.html
+++ b/apps/explorer/src/app/blocks/block-details/block-details.component.html
@@ -24,12 +24,7 @@
         <div class="item">
           <div class="label">Parent block</div>
           <div class="value">
-            <lto-responsive-text
-              xs="15"
-              sm="30"
-              double="true"
-              [text]="block.parent"
-            ></lto-responsive-text>
+            <lto-responsive-text xs="15" sm="30" double="true" [text]="block.parent"></lto-responsive-text>
           </div>
         </div>
         <div class="item">
@@ -41,12 +36,7 @@
         <div class="item">
           <div class="label">Signature</div>
           <div class="value">
-            <lto-responsive-text
-              xs="15"
-              sm="30"
-              double="true"
-              [text]="block.signature"
-            ></lto-responsive-text>
+            <lto-responsive-text xs="15" sm="30" double="true" [text]="block.signature"></lto-responsive-text>
           </div>
         </div>
         <div class="item">
@@ -61,18 +51,26 @@
     </mat-card>
     <ng-container *ngIf="block.transactions.length !== 0">
       <h3 class="mat-h3">Transactions</h3>
-      <mat-card
-        *ngFor="let transactionsGroup of (block.groupedTransactions | keyvalue)"
-        class="transactions-card"
-      >
+      <mat-card *ngFor="let transactionsGroup of (block.groupedTransactions | keyvalue)" class="transactions-card">
         <mat-card-title>{{ transactionsGroup.key | transactionLabel }}</mat-card-title>
         <explorer-card-content-table>
-          <explorer-transactions-table
-            [transactionsType]="transactionsGroup.key"
-            [transactions]="transactionsGroup.value"
-          ></explorer-transactions-table>
+          <lto-transactions-table [transactionLinkTemplate]="transactionLinkTpl" [addressLinkTemplate]="addressLinkTpl"
+            [transactionsType]="transactionsGroup.key" [transactions]="transactionsGroup.value"></lto-transactions-table>
         </explorer-card-content-table>
       </mat-card>
     </ng-container>
   </ng-container>
 </lto-content-section>
+
+
+<ng-template #addressLinkTpl let-address>
+  <a *ngIf="address" [routerLink]="['/', 'addresses', address]">
+    <lto-responsive-text xs="5" xl="15" [text]="address"></lto-responsive-text>
+  </a>
+</ng-template>
+
+<ng-template #transactionLinkTpl let-transactionId>
+  <a [routerLink]="['/', 'transactions', transactionId]">
+    <lto-responsive-text xs="30" xl="15" [text]="transactionId"></lto-responsive-text>
+  </a>
+</ng-template>
