--- a/apps/explorer/src/app/dashboard/components/unconfirmed-transactions/unconfirmed-transactions.component.html
+++ b/apps/explorer/src/app/dashboard/components/unconfirmed-transactions/unconfirmed-transactions.component.html
@@ -7,7 +7,7 @@
     <lto-loading-spinner *ngSuspensePlaceholder="300"></lto-loading-spinner>
     <ng-container *ngSuspenseSuccess="let transactions">
       <explorer-card-content-table *ngIf="transactions.length; else noTransactionsTpl">
-        <explorer-transactions-table [transactions]="transactions"></explorer-transactions-table>
+        <lto-transactions-table [addressLinkTemplate]="addressLinkTpl" [transactions]="transactions"></lto-transactions-table>
       </explorer-card-content-table>
     </ng-container>
   </ng-container>
@@ -18,4 +18,11 @@
       <span>All transactions confirmed</span>
     </div>
   </mat-card-content>
+</ng-template>
+
+
+<ng-template #addressLinkTpl let-address>
+  <a *ngIf="address" [routerLink]="['/', 'addresses', address]">
+    <lto-responsive-text xs="5" xl="15" [text]="address"></lto-responsive-text>
+  </a>
 </ng-template>
