--- a/theme/variables.scss
+++ b/theme/variables.scss
@@ -1,6 +1,7 @@
 @import '~@angular/material/theming';
 
-$primary-palette: mat-palette($mat-indigo);
+$typography: mat-typography-config($font-family: '"Open Sans", "Helvetica Neue", sans-serif;');
+$primary-palette: mat-palette($mat-deep-purple);
 $accent-palette: mat-palette($mat-pink, A200, A100, A400);
 $warn-palette: mat-palette($mat-red);
 
